Fix for sonar and more robust regex
Previous regex allowed codes as:
-
-X1C2